# Open-WebUI-OpenRouter-pipe

./: .gitignore  CHANGELOG.md  LICENSE  MULTIMODAL_IMPLEMENTATION.md  PLAN1-todo.md  PRODUCTION_READINESS_AUDIT.md  README-dev.md  README.md  VALVES_REFERENCE.md  open_webui_openrouter_pipe.py  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: copilot-instructions.md
docs/: README.md  concurrency_controls_and_resilience.md  developer_guide_and_architecture.md  documentation_index.md  error_handling_and_user_experience.md  history_reconstruction_and_context.md  model-variants.md  model_catalog_and_routing_intelligence.md  model_variants_and_presets.md  multimodal_ingestion_pipeline.md  openrouter_direct_uploads.md  openrouter_integrations_and_telemetry.md  openrouter_provider_routing.md  persistence_encryption_and_storage.md  production_readiness_report.md  request_identifiers_and_abuse_attribution.md  security_and_encryption.md  session_log_storage.md  streaming_pipeline_and_emitters.md  task_models_and_housekeeping.md  test_suite_audit_snapshot.md  testing_bootstrap_and_operations.md  tooling_and_integrations.md  valves_and_configuration_atlas.md  web_search_owui_vs_openrouter_search.md
filters/: README.md  openrouter_direct_uploads_toggle.py  openrouter_search_toggle.py  openrouter_zdr_filter.py
open_webui_openrouter_pipe/: __init__.py  open_webui_openrouter_pipe.py  pipe.py
openrouter_responses_pipe/: openrouter_responses_pipe.py  pytest_bootstrap.py
patches/: 0001-add-zdr-filter.patch  0002-add-zdr-model-hiding.patch  0003-add-task-model-overrides.patch  0004-add-model-icon-overrides.patch  0005-add-zdr-auto-install.patch  0006-fix-zdr-slug-matching.patch  0007-add-zdr-filter-icon-and-provider-exclusions.patch  0008-add-data-collection-deny-valve.patch  0009-fix-zdr-excluded-providers-helper.patch  0010-sync-fork-metadata-and-tests.patch  0011-fix-thinking-output-duplication.patch  0012-dedupe-status-events.patch  README.md
scripts/: bundle.py  check_owui_compatibility.py  repro_venv.sh  repro_venv_uv.sh  update_usage_db.py
tests/: conftest.py  test_anthropic.py  test_anthropic_prompt_caching.py  test_api_transforms.py  test_artifact_db_touch.py  test_artifact_helpers.py  test_auth_failfast.py  test_breaker_recovery.py  test_chat_file_tracking.py  test_chat_gateway.py  test_circuit_breaker.py  test_concurrency_limits.py  test_debug.py  test_direct_tool_servers.py  test_direct_upload_blocklist.py  test_direct_uploads.py  test_direct_uploads_audio_responses_allowlist.py  test_direct_uploads_filter.py  test_direct_uploads_filter_fail_open.py  test_disable_native_websearch.py  test_encryption_edge_cases.py  test_error_handling.py  test_error_template_rendering.py  test_error_templates.py  test_event_emitter.py  test_filters.py  test_helper_utilities.py  test_helpers.py  test_logging_system.py  test_metadata_features.py  test_models.py  (+62 more)
(+52 files in other folders)
