[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "open-webui-openrouter-pipe"
version = "1.0.19"
description = "OpenRouter Responses API pipe for Open WebUI"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "rbb-dev"}
]
maintainers = [
  {name = "rbb-dev"}
]
dependencies = [
  "aiohttp",
  "cryptography",
  "fastapi",
  "httpx",
  "lz4",
  "pydantic",
  "pydantic-core",
  "pyzipper",
  "sqlalchemy",
  "tenacity"
]

[project.urls]
Homepage = "https://github.com/rbb-dev"
Repository = "https://github.com/rbb-dev/Open-WebUI-OpenRouter-pipe"
Documentation = "https://github.com/rbb-dev/Open-WebUI-OpenRouter-pipe/blob/main/docs/README.md"
"Bug Tracker" = "https://github.com/rbb-dev/Open-WebUI-OpenRouter-pipe/issues"

[tool.setuptools.packages.find]
include = ["open_webui_openrouter_pipe"]
