[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "open-webui-openrouter-pipe"
version = "2.0.1"
description = "OpenRouter Responses API pipe for Open WebUI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "rbb-dev"}
]
maintainers = [
  {name = "rbb-dev"}
]
dependencies = [
  "aiohttp",
  "cairosvg",
  "cryptography",
  "fastapi",
  "httpx",
  "lz4",
  "Pillow",
  "pydantic",
  "pydantic-core",
  "pyzipper",
  "sqlalchemy",
  "tenacity"
]

[project.optional-dependencies]
dev = [
  "aioresponses"
]

[project.urls]
Homepage = "https://github.com/rbb-dev"
Repository = "https://github.com/rbb-dev/Open-WebUI-OpenRouter-pipe"
Documentation = "https://github.com/rbb-dev/Open-WebUI-OpenRouter-pipe/blob/main/docs/README.md"
"Bug Tracker" = "https://github.com/rbb-dev/Open-WebUI-OpenRouter-pipe/issues"

[tool.setuptools.packages.find]
include = ["open_webui_openrouter_pipe*"]

[tool.setuptools.package-data]
open_webui_openrouter_pipe = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["pytest_bootstrap.py"]
